removed PanelTypes enum , created backbutton in newgamepanel, improvement in monsterpanel, monsterinfopanel, optimized Gender enum